--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,52 @@
 	<meta name="viewport"
 				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-	<script src="js/index.js" defer></script>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<script src="./js/index.js" defer></script>
+<!--	<script src="bootstrap/bootstrap.min.js" defer></script>-->
+<!--	<link rel="stylesheet" href="bootstrap/bootstrap.min.css">-->
 	<link rel="stylesheet" href="css/style.css">
-	<title>Dashboard</title>
+	<title>Dashboard 123</title>
 </head>
 
 <body>
+<div class="container-fluid text-center">
+	<header class="header-nav">
+		<h4>Dashboard system</h4>
+		<nav class="nav-list">
+			<a href="#">Sign up</a>
+			<a href="#">Sign in</a>
+		</nav>
+	</header>
+	<main class="row justify-content-start bg-main">
+		<section class="col-6 p-0 image-container">
+			<img src="assets/img/bg_signin.png" alt="background image">
+		</section>
+		<section class="col-6 text-white row justify-center align-items-center px-10 py-4">
+			<div>
+				<h3 class="mb-4">Nice to see you!</h3>
+				<p>Enter your email and password to sign in</p>
 
+				<form action="#">
+					<div class="mb-2">
+						<label for="email-log" class="d-block">Email</label>
+						<input type="email" placeholder="Your email address" id="email-log" class="w-100">
+					</div>
+
+					<div class="mb-4">
+						<label for="password-log" class="d-block">Password</label>
+						<input type="email" placeholder="Your password" id="password-log">
+					</div>
+
+					<button>
+						Sign in
+					</button>
+				</form>
+
+				<p>Don't hane an account? <a href="#">Sign up</a></p>
+			</div>
+
+		</section>
+	</main>
+</div>
 </body>
 </html>
