--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
 				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<script src="./js/index.js" defer></script>
-<!--	<script src="bootstrap/bootstrap.min.js" defer></script>-->
-<!--	<link rel="stylesheet" href="bootstrap/bootstrap.min.css">-->
 	<link rel="stylesheet" href="css/style.css">
 	<title>Dashboard</title>
 </head>
@@ -17,8 +15,8 @@
   <header class="header-nav shadow">
     <h4>Dashboard system</h4>
     <nav class="nav-list">
-      <a href="signup.html">Sign up</a>
-      <a href="/">Sign in</a>
+      <a href="signup.html" >Sign up</a>
+      <a href="/" class="active">Sign in</a>
     </nav>
   </header>
 	<main class="row justify-content-start bg-main">
