started main pade design

--- a/src/main.html
+++ b/src/main.html
@@ -10,6 +10,46 @@
   <title>Main</title>
 </head>
 <body>
-i am main page
+  <div class="container-fluid bg-main image d-flex flex-row justify-content-between align-items-start">
+    <aside class="aside-container text-white flex-grow-1 h-100">
+      <h2 class="aside-title fs-3 text-uppercase text-center mb-11">dashboard</h2>
+      <nav class="navigation-list">
+        <ul>
+          <li><a href="#">Dashboard</a></li>
+          <li><a href="#">Tables</a></li>
+        </ul>
+      </nav>
+      <h3 class="fs-6 text-uppercase">Account</h3>
+      <nav class="navigation-list">
+        <ul>
+          <li><a href="#">Profile</a></li>
+          <li><a href="#">Log out</a></li>
+        </ul>
+      </nav>
+    </aside>
+    <section class="dashboard-container text-white flex-grow-1 h-100">
+      <div class="grid-container h-100">
+        <div class="div1 grid-item"> 1</div>
+        <div class="div2 grid-item"> 2</div>
+        <div class="div3 grid-item"> 3</div>
+        <div class="div4 grid-item"> 4</div>
+        <div class="div5 grid-item"> 5</div>
+        <div class="div6 grid-item"> 6</div>
+        <div class="div7 grid-item"> 7</div>
+        <div class="div8 grid-item"> 
+          <div>
+            some text
+          </div>
+          
+        </div>
+        <div class="div9 grid-item"> 9</div>
+        <div class="div10 grid-item"> 10</div>
+        <div class="div11 grid-item"> 11</div>
+        <div class="div12 grid-item"> 12</div>
+        <div class="div13 grid-item"> 13</div>
+        <div class="div14 grid-item"> 14</div>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
