--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 					<div class="mb-12">
 						<label for="password-log" class="d-block mb-1">Password</label>
 						<input 
-              type="email" 
+              type="password" 
               placeholder="Your password" 
               id="password-log" 
               class="form-hover w-100 px-3 py-2 bg-transparent rounded-4 text-white shadow"
