--- a/src/main.html
+++ b/src/main.html
@@ -29,7 +29,7 @@
                 </defs>
               </svg>
             </div>
-            <a href="#">Dashboard</a></li>
+            <a href="main.html">Dashboard</a></li>
           <li>
             <div class="svg-aside">
               <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -46,7 +46,7 @@
                 </defs>
               </svg>
             </div>
-            <a href="#">Projects</a>
+            <a href="projects.html">Projects</a>
           </li>
         </ul>
       </nav>
@@ -60,7 +60,7 @@
                 <path class="svg-path" d="M13.1564 14.5616H2.84392C2.70894 14.5634 2.57526 14.535 2.45262 14.4786C2.32997 14.4222 2.22145 14.3392 2.13493 14.2355C1.9445 14.0079 1.86775 13.6971 1.92458 13.3827C2.17185 12.011 2.94353 10.8588 4.15642 10.0499C5.23396 9.33183 6.5989 8.93661 8.00016 8.93661C9.40143 8.93661 10.7664 9.33212 11.8439 10.0499C13.0568 10.8585 13.8285 12.0107 14.0757 13.3824C14.1326 13.6968 14.0558 14.0076 13.8654 14.2352C13.7789 14.3389 13.6704 14.422 13.5478 14.4785C13.4251 14.5349 13.2914 14.5633 13.1564 14.5616V14.5616Z" fill="#0075FF"/>
               </svg>
             </div>
-            <a href="#">Profile</a>
+            <a href="profile.html">Profile</a>
           </li>
           <li>
             <div class="svg-aside">
@@ -69,7 +69,7 @@
                 <path class="svg-path" d="M5.43359 12.2028C5.27305 12.3636 5.01553 12.4263 4.70557 12.4799C4.00918 12.5986 3.39424 11.9968 3.51934 11.2928C3.56709 11.0259 3.7083 10.6518 3.79619 10.5639C3.8154 10.5451 3.82819 10.5207 3.83274 10.4941C3.83728 10.4676 3.83336 10.4403 3.82152 10.4162C3.80968 10.392 3.79053 10.3722 3.76679 10.3595C3.74305 10.3469 3.71592 10.342 3.68926 10.3457C3.29983 10.3933 2.93754 10.5699 2.66006 10.8472C1.97129 11.5366 1.90625 14.0945 1.90625 14.0945C1.90625 14.0945 4.46562 14.0294 5.15439 13.3401C5.43261 13.0628 5.60939 12.7 5.65625 12.31C5.66709 12.1875 5.51797 12.1146 5.43359 12.2028Z" fill="#0075FF"/>
               </svg>
             </div>
-            <a href="#">Log out</a>
+            <a href="#" id="logout">Log out</a>
           </li>
         </ul>
       </nav>
@@ -180,7 +180,8 @@
           
         </div>
         <div class="item9 grid-item">
-          <canvas class="m-auto" id="my-chart-doughnut"></canvas>
+          <h3 class="mb-2">Articles statistic</h3>
+          <canvas class="m-auto pb-4" id="my-chart-doughnut"></canvas>
         </div>
         <div class="item10 grid-item">
          
