--- a/src/main.html
+++ b/src/main.html
@@ -191,17 +191,80 @@
           <div class="d-flex justify-content-between align-items-start ">
             <div>
               <h3 class="mb-2">Projects</h3>
-              <img src="./assets/img/icons/mark.svg" alt="mark icon">
+                <img src="./assets/img/icons/mark.svg" alt="mark icon">
               <span class="text-secondary fw-bold">30 done this month</span>
             </div>
             <div>
-              <a href="#">
+              <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <img src="./assets/img/icons/more_vert.svg" alt="more button">
-              </a>
+              </button>
             </div>
           </div>
-          <div class="scroll">
-            <table class="table ">
+          
+          <!-- Modal add project -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Add new project</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Project name</label>
+                    <input 
+                      type="text" 
+                      class="form-control" 
+                      id="exampleFormControlInput1" 
+                      placeholder="Enter project name..."
+                    >
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Project description</label>
+                    <textarea 
+                      class="form-control" 
+                      id="exampleFormControlTextarea1" 
+                      rows="3" 
+                      placeholder="Enter project description..."
+                    ></textarea>
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlInput2" class="form-label">Author</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="exampleFormControlInput2"
+                      placeholder="Enter author name..."
+                    >
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlInput3" class="form-label">Status done (from 0 to 100%)</label>
+                    <input
+                      type="number"
+                      min="0"
+                      max="100"
+                      class="form-control"
+                      id="exampleFormControlInput3"
+                      value="0"
+                    >
+                  </div>
+                </div>
+                <div class="modal-footer justify-content-between">
+                  <p id="modal-error" class="text-start text-danger fs-6"></p>
+                  <div>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="close-modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="save-project">Save projects</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- -------  -->
+
+          <!-- Projects list -->
+          <div class="scroll" >
+            <p id="no-projects-notify"></p>
+            <table class="table table-responsive" id="projects-table" >
               <thead>
               <tr>
                 <th scope="col">№</th>
@@ -210,233 +273,10 @@
                 <th scope="col">Author</th>
                 <th scope="col" class="text-center">Status</th>
                 <th scope="col" class="text-end">Actions</th>
-
               </tr>
               </thead>
-              <tbody class="table-group-divider">
-              <tr>
-                <th scope="row">1</th>
-                <td>JavaScript</td>
-                <td>HTML</td>
-                <td>CSS</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-success text-bg-warning" style="width: 100%">100%</div>
-                  </div>
-                </td>
-                <td class="text-end">
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-sm btn-primary ">Done</button>
-                    <button type="button" class="btn btn-sm btn-warning ">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-warning text-bg-warning" style="width: 75%">75%</div>
-                  </div>
-                </td>
-                <td class="text-end">
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-sm btn-primary">Done</button>
-                    <button type="button" class="btn btn-sm btn-warning">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-warning text-bg-warning" style="width: 50%">50%</div>
-                  </div>
-                </td>
-                <td class="text-end">
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-sm btn-primary">Done</button>
-                    <button type="button" class="btn btn-sm btn-warning">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-danger text-bg-warning" style="width: 20%"></div>
-                  </div>
-                </td>
-                <td class="text-end">
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-sm btn-primary">Done</button>
-                    <button type="button" class="btn btn-sm btn-warning">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-danger text-bg-warning" style="width: 20%"></div>
-                  </div>
-                </td>
-                <td class="text-end">
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-sm btn-primary">Done</button>
-                    <button type="button" class="btn btn-sm btn-warning">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-danger text-bg-warning" style="width: 20%"></div>
-                  </div>
-                </td>
-                <td class="text-end">
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-sm btn-primary">Done</button>
-                    <button type="button" class="btn btn-sm btn-warning">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-danger text-bg-warning" style="width: 20%"></div>
-                  </div>
-                </td>
-                <td class="text-end">
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-sm btn-primary">Done</button>
-                    <button type="button" class="btn btn-sm btn-warning">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-danger text-bg-warning" style="width: 20%"></div>
-                  </div>
-                </td>
-                <td class="text-end">
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-sm btn-primary">Done</button>
-                    <button type="button" class="btn btn-sm btn-warning">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                  </div>
-                </td>
-              </tr><tr>
-                <th scope="row">4</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-danger text-bg-warning" style="width: 20%"></div>
-                  </div>
-                </td>
-                <td class="text-end">
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-sm btn-primary">Done</button>
-                    <button type="button" class="btn btn-sm btn-warning">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-danger text-bg-warning" style="width: 20%"></div>
-                  </div>
-                </td>
-                <td class="text-end">
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-sm btn-primary">Done</button>
-                    <button type="button" class="btn btn-sm btn-warning">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-danger text-bg-warning" style="width: 20%"></div>
-                  </div>
-                </td>
-                <td class="text-end">
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-sm btn-primary">Done</button>
-                    <button type="button" class="btn btn-sm btn-warning">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-danger text-bg-warning" style="width: 20%"></div>
-                  </div>
-                </td>
-                <td class="text-end">
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-sm btn-primary">Done</button>
-                    <button type="button" class="btn btn-sm btn-warning">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-danger text-bg-warning" style="width: 20%"></div>
-                  </div>
-                </td>
-                <td class="text-end">
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-sm btn-primary">Done</button>
-                    <button type="button" class="btn btn-sm btn-warning">Edit</button>
-                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                  </div>
-                </td>
-              </tr>
-
+              <tbody class="table-group-divider" id="projects-list">
+              
               </tbody>
             </table>
           </div>
