add updating projectQuantity, articlesQuantity

--- a/src/main.html
+++ b/src/main.html
@@ -146,9 +146,7 @@
               <p class="mb-2">
                 Articles quantity
               </p>
-              <p class="fs-1 text-primary">
-                1500
-              </p>
+              <p class="fs-1 text-primary" id="articles-quantity"></p>
             </div>
             <div class="icon-container p-2 bg-primary rounded">
               <img class="w-100" src="./assets/img/icons/article.png" alt="article image">
