fixed reactivity for add articles

--- a/src/main.html
+++ b/src/main.html
@@ -293,7 +293,11 @@
             <span class="text-secondary fw-bold">Status: active</span>
           </div>
           
-          <div class="scroll d-flex align-items-start justify-content-center flex-wrap gap-4" id="articles-list">
+          <div class="scroll">
+            <p id="no-articles-notify"></p>
+            <div id="articles-list-container">
+              <div id="articles-list" class="d-flex align-items-start justify-content-center flex-wrap gap-4"></div>
+            </div>
           </div>
         </div>
         
