--- a/src/main.html
+++ b/src/main.html
@@ -346,9 +346,12 @@
         <div class="modal" tabindex="-1" id="articleBody">
           <div class="modal-dialog">
             <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="open-header"></h1>
+              <div class="modal-header gap-5">
+                <button type="button" class="btn btn-warning" id="finish-article">Publish</button>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-header">
+                <h1 class="modal-title fs-5 " id="open-header"></h1>
               </div>
               <div class="modal-body">
                 <div class="w-100 object-fit-cover mb-2">
