added function 'editArticle'

--- a/src/main.html
+++ b/src/main.html
@@ -332,7 +332,8 @@
                 <p id="modal-article-error" class="text-start text-danger fs-6"></p>
                 <div>
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary" id="save-article">Save changes</button>
+                  <button type="button" class="btn btn-primary" id="save-article">Save article</button>
+                  <button type="button" class="btn btn-primary hidden" id="save-edited-article">Save changes</button>
                 </div>
                 
               </div>
