--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,6 @@
 	<meta name="viewport"
 				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<script src="./js/index.js" defer></script>
-	<link rel="stylesheet" href="css/style.css">
 	<title>Dashboard</title>
 </head>
 
@@ -16,7 +14,7 @@
     <h4>Dashboard system</h4>
     <nav class="nav-list">
       <a href="signup.html" >Sign up</a>
-      <a href="/" class="active">Sign in</a>
+      <a href="index.html" class="active">Sign in</a>
     </nav>
   </header>
 	<main class="row justify-content-start bg-main">
