--- a/src/signup.html
+++ b/src/signup.html
@@ -5,8 +5,6 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="./js/index.js" defer></script>
-  <link rel="stylesheet" href="css/style.css">
   <title>Dashboard</title>
 </head>
 
@@ -16,7 +14,7 @@
     <h4>Dashboard system</h4>
     <nav class="nav-list">
       <a href="signup.html" class="active">Sign up</a>
-      <a href="/">Sign in</a>
+      <a href="index.html">Sign in</a>
     </nav>
   </header>
   <main class="row justify-content-start bg-main">
@@ -67,7 +65,7 @@
           </button>
         </form>
 
-        <p class="text-center text-secondary fw-bold">Already have an account? <a href="/" class="link-hover text-white">Sign in</a></p>
+        <p class="text-center text-secondary fw-bold">Already have an account? <a href="index.html" class="link-hover text-white">Sign in</a></p>
       </div>
 
     </section>
