added adaptive for main.html

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 		<section class="col-sm-12 col-md-6 p-0 image-container">
 			<img src="assets/img/bg_signin.png" alt="background image">
 		</section>
-		<section class="col-sm-12 col-md-6 form-section text-white text-start d-flex justify-content-center align-items-center py-4">
+		<section id="form-section"  class="col-sm-12 col-md-6 form-section text-white text-start d-flex justify-content-center align-items-center py-4">
 			<div class="p-4 col-xxl-8 col-md-10">
         <div class="mb-10 text-center" id="welcome-text">
           <h3 class="mb-3 fs-3">Nice to see you!</h3>
@@ -74,7 +74,6 @@
 				<p id="sign-up-link" class="text-center text-secondary fw-bold">Don't have an account? <a data-sign-link="sign-up" href="#" class="link-hover text-white">Sign up</a></p>
         
 			</div>
-
 		</section>
 	</main>
 </div>
